# blippython

./: .gitignore  ASSUMPTIONS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_time_review.yml
config/: employee_rules.sample.yml  exception_rules.yml
data/input/: sample_bright_hr_export.csv
docs/: exception_rule_definitions.md  handoff_instructions.md  process_overview.md  reviewer_user_guide.md  sharepoint_power_automate_setup.md
src/brighthr_time_review/: __init__.py  brighthr_api_client.py  config.py  exceptions.py  loader.py  logging_config.py  main.py  normalizer.py  rules.py  sharepoint_uploader.py  workbook_builder.py
tests/: test_brighthr_api_client.py  test_loader.py  test_normalizer.py  test_rules.py  test_sharepoint_uploader.py  test_workbook_builder.py
